Changed dropdown menu buttons to micro and made them toggle on visibility instead of display (fixes jumpiness)

--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -574,7 +574,7 @@ ul.treeselect input {
 	margin: 2px 0 0 8px;
 }
 ul.treeselect .treeselect-menu {
-	width: 30px;
+	margin-right: 0 6px;
 }
 ul.treeselect ul.dropdown-menu {
 	margin: 0;
